--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
             <a href='/post/{{post.slug}}'>{{ post.title }}</a>
         </p>
     </div>
-    <div class='card-body' style='background-color:#10DF10'>
+    <div class='card-body' style='background-color:#c176ff'>
         <p>
-           {{ post.body | truncatechars:40 }}
+           {{ post.chapter | truncatechars:40 }}
         </p>
     </div>
     <div class='card-footer'  style='background-color:#efefef'>
