--- a/templates/base2.html
+++ b/templates/base2.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -28,9 +24,9 @@
                         </div>
                         <div class="card-body">
                             <div class="list-group">
-                                <a href="/" class="list-group-item">HOME</a>
-                                <a href="https://google.com/news" class="list-group-item">即時新聞</a>
-                                <a href="https://www.youtube.com" class="list-group-item">YOUTUBE</a>
+                                <a href="/" class="list-group-item">HOME</a>  
+                            <!--<a href="https://google.com/news" class="list-group-item">即時新聞</a>
+                                <a href="https://www.youtube.com" class="list-group-item">YOUTUBE</a> -->
                             </div>
                         </div>
                     </div>
