--- a/templates/post.html
+++ b/templates/post.html
@@ -6,6 +6,7 @@
 <a style='font-family:微軟正黑體;' href='/'>回首頁</a>
 {% endblock headmessage %} 
 {% block content %} 
+<h4 style='font-family:微軟正黑體;'>{{ post.chapter }}</h4>
 <p style='font-family:微軟正黑體;font-size:12pt;letter-spacing:2pt;'>
     {{ post.body | convert_markdown | safe }}</a>
 </p>
