--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,25 @@
 {% block content %} 
 {% for post in posts %}
 <div class='card'>
-    <div class='card-header'>
-        <p style='font-family:微軟正黑體;font-size:18pt;font-weight:bold;'>
-            <a href='/post/{{post.slug}}'>{{ post.title }} </a><a>{{ post.author }} </a>
-        </p>
+    <div class='card-header row'>
+        <div class='col-md-auto'>
+            <p style='font-family:微軟正黑體;font-size:18pt;font-weight:bold;'>
+            <a href='/post/{{post.slug}}'>{{ post.title }} </a>
+            </p>
+        </div>
+        <div class='col'>
+            <p style='font-family:微軟正黑體;font-size:18pt;font-weight:bold;'>
+            <a>|   作者:{{ post.author }} </a>
+            </p>
+        </div>
+        
     </div>
-    <div class='card-body' style='background-color:#c176ff'>
+    <div class='card-body' style='background-color:#ffffff'>
         <p style='font-family:微軟正黑體;font-size:15pt;font-weight:bold;'>
            {{ post.chapter }}
         </p>
     </div>
-    <div class='card-footer'  style='background-color:#efefef'>
+    <div class='card-footer'  style='background-color:#ffffff'>
         <p>
             出版時間：{{ post.pub_date }}
         </p>
