--- a/templates/base2.html
+++ b/templates/base2.html
@@ -38,7 +38,8 @@
                             {% endblock %}
                         </div>
                         <div class="card-body">
-                            {% block content %} {% endblock %}
+                            {% block content %}
+                             {% endblock %}
                         </div>
                         <div class="card-footer">
                             {% include 'footer.html' %}
