--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <!-- header.html -->
 {% load static %}
 <div class='well'>
-    <img src="{% static "images/OIG.jfif" %}" height="100">
+    <img src="{% static "images/library3.png" %}" height="100">
 </div>
 
