--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,9 @@
 <!-- header.html -->
 {% load static %}
 <div class='well'>
-    <img src="{% static "images/library3.png" %}" height="100">
+    <img src="{% static "images/library-darkMode.png" %}" height="100">
+    <p style='font-family:微軟正黑體;font-size:16pt;letter-spacing:2pt;'>
+        <a>LIBRARY</a>
+    </p>
 </div>
 
