--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block headmessage %} <h3 style='font-family:標楷體;'>圖書列表</a> {% endblock headmessage %} 
 {% block content %} 
 {% for post in posts %}
-<div class='card'>
+<div class='card row'>
     <div class='card-header row'>
         <div class='col-md-auto'>
             <p style='font-family:微軟正黑體;font-size:18pt;font-weight:bold;'>
