--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,10 @@
 <!-- header.html -->
 {% load static %}
 <div class='well'>
-    <img src="{% static "images/library-darkMode.png" %}" height="100">
-    <p style='font-family:微軟正黑體;font-size:16pt;letter-spacing:2pt;'>
-        <a>LIBRARY</a>
-    </p>
+    <div style="display: flex; align-items: center;">
+        <img src="{% static "images/library-darkMode.png" %}" height="100">
+        <p style='font-family:微軟正黑體;font-size:40pt;letter-spacing:2pt; margin-left: 10px; margin-TOP: 11px;'>
+            LIBRARY
+        </p>
+    </div>
 </div>
-
