--- a/templates/base2.html
+++ b/templates/base2.html
@@ -24,7 +24,8 @@
                         </div>
                         <div class="card-body">
                             <div class="list-group">
-                                <a href="/" class="list-group-item">HOME</a>  
+                                <a href="/" class="list-group-item">HOME</a>
+                                <a href="/" class="list-group-item">租借的書</a>    
                             <!--<a href="https://google.com/news" class="list-group-item">即時新聞</a>
                                 <a href="https://www.youtube.com" class="list-group-item">YOUTUBE</a> -->
                             </div>
@@ -50,5 +51,17 @@
         </div>
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script>
+            var myList = [];
+            // 租借書到列表
+            function addToMyList(bookTitle) {
+                if (myList.includes(bookTitle)){
+                    alert("您已經借過此書!。");}
+
+                else{
+                    myList.push(bookTitle);
+                    alert(bookTitle + " 您已成功租借第一本!。");}
+            }
+        </script>
     </body>
 </html> 
