--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,9 @@
 {% load static %}
 <div class='well'>
     <div style="display: flex; align-items: center;">
+        <a href="/">
         <img src="{% static "images/library-darkMode.png" %}" height="100">
+        </a>
         <p style='font-family:微軟正黑體;font-size:40pt;letter-spacing:2pt; margin-left: 10px; margin-TOP: 11px;'>
             LIBRARY
         </p>
