--- a/templates/base2.html
+++ b/templates/base2.html
@@ -27,7 +27,7 @@
                         <div class="card-body">
                             <div class="list-group">
                                 <a href="/" class="list-group-item">HOME</a>
-                                <a href="/" class="list-group-item">租借的書</a>    
+                                <a href="/filter" class="list-group-item">查詢</a>    
                             <!--<a href="https://google.com/news" class="list-group-item">即時新聞</a>
                                 <a href="https://www.youtube.com" class="list-group-item">YOUTUBE</a> -->
                             </div>
