--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,39 +1,16 @@
-/* Reset some default browser styles */
-body, h1, p {
-    margin: 0;
-    padding: 0;
-}
-
-/* Set a background color for the entire page */
-body {
-    background-color: #f5f5f5;
-    font-family: Arial, sans-serif;
-}
-
-/* Style the header */
-header {
-    background-color: #333;
+.btn-primary {
+    background-color: #ffffff;
     color: #fff;
-    text-align: center;
-    padding: 20px;
-}
+    border: none;
+    padding: 5px 10px;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px ;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
 
-/* Style the main content */
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+  a[href^="/post/"] {
+    color: rgb(0, 0, 0)!important;
 }
-
-h1 {
-    font-size: 24px;
-    color: #333;
-}
-
-p {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #666;
-}
-
-/*
