--- a/templates/base2.html
+++ b/templates/base2.html
@@ -60,11 +60,11 @@
             // 租借書到列表
             function addToMyList(bookTitle) {
                 if (myList.includes(bookTitle)){
-                    alert("您已經借過此書!。");}
+                    alert("您已收藏此書!");}
 
                 else{
                     myList.push(bookTitle);
-                    alert(bookTitle + " 您已成功租借第一本!。");}
+                    alert(bookTitle + " 您已成功收藏此書!。");}
             }
         </script>
     </body>
