--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base2.html" %}
 {% block title %}歡迎光臨咱們的圖書館{% endblock title %}
-{% block headmessage %} <h3 style='font-family:標楷體;'>圖書列表</a> {% endblock headmessage %} 
+{% block headmessage %} <h3 style='font-family:微軟正黑體;'>圖書列表</h3> {% endblock headmessage %} 
 {% block content %} 
 {% for post in posts %}
 <div class="card">
@@ -12,17 +12,17 @@
         <div class="col-md-8">
             <!-- 右側是cardㄉ內容-->
             <div class="card-body">
-                <h3 class="card-title">
-                    <a href="/post/{{ post.slug }}">{{ post.title }}</a>
+                <h3 class="card-title">{{ post.title }}
                 </h3>
                 <h5 class="card-text">作者: {{ post.author }}</h5>
                 <h5 class="card-text">{{ post.chapter }}</h5>
                 <h5 class="card-text">出版時間: {{ post.pub_date }}</h5>
-                <a href="javascript:void(0);" class="btn btn-primary" onclick="addToMyList('{{ post.title }}')">租借第一本</a>
+                <a href="/intro/{{ post.slug }}" class="btn btn-primary">開始租借</a>
+                <a href="javascript:void(0);" class="btn btn-primary" onclick="addToMyList('{{ post.title }}')">加入收藏!</a>
             </div>
         </div>
     </div>
 </div>
 {% endfor %}
 {% endblock content %}
-<a href='/post/{{post.slug}}'>{{ post.title }} </a>
+<a href="/intro/{{ post.slug }}">{{ post.title }}</a>
