--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,6 @@
 {% extends "base2.html" %}
 {% load markdown_extras %}
-{% block title %} {{ post.title }} - 文學天地 {% endblock title %}
+{% block title %} {{ post.title }} - OuOb {% endblock title %}
 {% block headmessage %} 
 <div style='display: flex; justify-content: space-between; align-items: center;'>
     <h3 style='font-family: 微軟正黑體;'>{{ post.title }}</h3>
