--- a/templates/base2.html
+++ b/templates/base2.html
@@ -35,6 +35,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>組員名單 ╮(′～‵〞)╭</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="list-group">
+                                <h5 class="card-text">11056003 鄧寓憲</h5>
+                                <h5 class="card-text">11056034 楊文豪</h5>  
+                            <!--<a href="https://google.com/news" class="list-group-item">即時新聞</a>
+                                <a href="https://www.youtube.com" class="list-group-item">YOUTUBE</a> -->
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-8 col-md-8">
                     <div class="card">
