--- a/templates/intro.html
+++ b/templates/intro.html
@@ -18,8 +18,9 @@
             <div class="card-body">
                 <h5 class="card-text">作者: {{ post.author }}</h5>
                 <h5 class="card-text">{{ post.chapter }}</h5>
-                <h5 class="card-text">內容簡介︰ {{ post.pub_date }}</h5>
+                <h5 class="card-text">內容簡介︰</h5>
                 <h5 class="card-text">{{ post.body }}</h5>
+                <h5 class="card-text">出版日期︰ {{ post.pub_date }}</h5>
                 <a href="javascript:void(0);" class="btn btn-primary" onclick="addToMyList('{{ post.title }}')">加入收藏!</a>     
             </div>
         </div>
@@ -28,9 +29,7 @@
 <div class="card">
     <div class="card-header"><h4 style='font-family:微軟正黑體;'>集數</h4></div>
     {% for episode in episodes %}
-  <h2>{{ episode.title }}</h2>
-  <p>{{ episode.content }}</p>
-{% endfor %}
+    <a href="{% url 'showepisode' episode.id %}">{{ episode.episode }}</a>
+    {% endfor %}
 </div>
-<p>Debug: episodes = {{ episodes }}</p>
 {% endblock content %}
